--- a/index.html
+++ b/index.html
@@ -171,6 +171,46 @@
             <p class="certifications">Audité par CertiK | Conforme KYC/AML</p>
         </div>
 
+        <!-- Après la section Témoignages -->
+<div class="section testimonials">
+    <h2>Ils Parlent de Nous</h2>
+    <div class="testimonial-carousel">
+        <p>"Une révolution pour l’immobilier blockchain." - Marc T.</p>
+        <p>"Simple et sécurisé pour diversifier." - Sophie R.</p>
+        <p>"Rendements impressionnants en 6 mois." - Pierre L.</p>
+    </div>
+</div>
+
+<!-- Nouvelle section Partenaires -->
+<div class="section partners">
+    <h2>Nos Partenaires</h2>
+    <div class="partner-logos">
+        <a href="https://www.lbank.com/" target="_blank" aria-label="Logo LBank" alt="Logo LBank">
+            <svg width="150" height="50" xmlns="http://www.w3.org/2000/svg" class="partner-logo">
+                <rect x="10" y="10" width="30" height="30" fill="#0A66C2" rx="5"/>
+                <text x="18" y="32" font-family="Roboto, sans-serif" font-size="20" font-weight="700" fill="#FFD700">L</text>
+                <rect x="45" y="10" width="30" height="30" fill="#FFD700" rx="5"/>
+                <text x="53" y="32" font-family="Roboto, sans-serif" font-size="20" font-weight="700" fill="#0A66C2">B</text>
+                <text x="80" y="32" font-family="Roboto, sans-serif" font-size="20" font-weight="700" fill="#2c3e50">ank</text>
+            </svg>
+        </a>
+        <a href="https://chain f.link/" target="_blank" aria-label="Logo Chainlink" alt="Logo Chainlink">
+            <svg width="150" height="50" xmlns="http://www.w3.org/2000/svg" class="partner-logo">
+                <polygon points="20,15 35,5 50,15 50,35 35,45 20,35" fill="none" stroke="#375BD2" stroke-width="4"/>
+                <polygon points="25,20 35,14 45,20" fill="#375BD2"/>
+                <text x="60" y="32" font-family="Roboto, sans-serif" font-size="20" font-weight="700" fill="#375BD2">Chainlink</text>
+            </svg>
+        </a>
+    </div>
+    <p class="certifications">Audité par CertiK | Conforme KYC/AML</p>
+</div>
+
+<!-- Suivi par la Roadmap -->
+<div class="section roadmap">
+    <h2>Notre Roadmap</h2>
+    <!-- ... -->
+</div>
+
         <div class="section roadmap">
             <h2>Notre Roadmap</h2>
             <div class="timeline">
