--- a/index.html
+++ b/index.html
@@ -160,8 +160,15 @@
                 <button onclick="requestLoan()" class="cta-button hidden" id="loan-request-btn">Demander un prêt</button>
             </div>
         </section>
+ <!-- Après la section Témoignages -->
 
-        <!-- Après la section Témoignages -->
+          <div class="section crypto-prices">
+            <h2>Prix en Direct</h2>
+            <p id="btcPrice"></p>
+            <p id="goldPrice"></p>
+            <p id="silverPrice"></p>
+        </div>
+
 <div class="section testimonials">
     <h2>Ils Parlent de Nous</h2>
     <div class="testimonial-carousel">
