--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         .cta-button:hover {
             background: #34495e;
         }
-        /* Styles pour la nouvelle section Vente de Tokens */
+        /* Styles pour la section Vente de Tokens */
         .token-sale {
             text-align: center;
         }
@@ -108,6 +108,36 @@
         }
         .token-sale-item .cta-button {
             margin-top: 15px;
+        }
+        /* Styles pour la nouvelle section Équipe */
+        .team {
+            text-align: center;
+        }
+        .team h2 {
+            font-size: 1.8em;
+            margin-bottom: 20px;
+        }
+        .team-container {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .team-member {
+            flex: 1;
+            min-width: 250px;
+            background: #f9f9f9;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+        }
+        .team-member h3 {
+            font-size: 1.4em;
+            margin-bottom: 5px;
+        }
+        .team-member p {
+            margin: 5px 0;
+            color: #555;
         }
     </style>
 </head>
@@ -222,7 +252,7 @@
             </div>
         </div>
 
-        <!-- Nouvelle section : Vente de Tokens -->
+        <!-- Section : Vente de Tokens -->
         <div class="section token-sale">
             <h2>Vente de Tokens</h2>
             <div class="token-sale-container">
@@ -246,6 +276,28 @@
                     <p>Lancement : Q3 2025.</p>
                     <p><strong>Avantages :</strong> Frais réduits, accès anticipé, gouvernance.</p>
                     <a href="#opportunites" class="cta-button" aria-label="Voir les opportunités">Voir les Opportunités</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Nouvelle section : Équipe -->
+        <div class="section team">
+            <h2>Équipe</h2>
+            <div class="team-container">
+                <div class="team-member">
+                    <h3>Rodrigues Delmar</h3>
+                    <p>Co-fondateur & CEO</p>
+                    <p>Expert en trading crypto & blockchain</p>
+                </div>
+                <div class="team-member">
+                    <h3>Alexandre Perez</h3>
+                    <p>CTO</p>
+                    <p>Ingénieur blockchain spécialisé en smart contracts</p>
+                </div>
+                <div class="team-member">
+                    <h3>Marie Balsan</h3>
+                    <p>COO</p>
+                    <p>Experte en régulation et conformité crypto</p>
                 </div>
             </div>
         </div>
