--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         .team-member { flex: 1; min-width: 250px; background: #f9f9f9; padding: 20px; border-radius: 8px; text-align: center; }
         .team-member h3 { font-size: 1.4em; margin-bottom: 5px; }
         .team-member p { margin: 5px 0; color: #555; }
+        #loading-spinner { margin-left: 5px; }
+        #network-status, #error-message { margin-top: 5px; }
     </style>
 </head>
 <body>
@@ -221,8 +223,10 @@
             <h2>Simulateur de Prêt RWA</h2>
             <p>Calculez votre prêt en fonction de vos actifs tokenisés.</p>
             <div class="simulator-form">
-                <button id="connect-metamask" class="cta-button">Connecter MetaMask</button>
+                <button id="connect-metamask" class="cta-button">Connecter MetaMask <span id="loading-spinner" class="hidden">⏳</span></button>
                 <p id="wallet-address" class="hidden">Adresse connectée : Aucune</p>
+                <p id="network-status" class="hidden" style="color: #e74c3c;"></p>
+                <p id="error-message" class="hidden" style="color: #e74c3c;"></p>
                 <label>Type de Collatéral :</label>
                 <select id="collateral-type" class="w-full p-2 border rounded">
                     <option value="bitcoin">Bitcoin</option>
@@ -367,7 +371,6 @@
     </script>
 
     <script>
-        // Objet pour stocker les prix en temps réel
         let livePrices = {
             'bitcoin': 0,
             'pax-gold': 0,
@@ -375,7 +378,6 @@
             'immobilier': 1000
         };
 
-        // Récupérer les prix via CoinGecko
         async function fetchLivePrices() {
             try {
                 const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,pax-gold,slv-token&vs_currencies=usd');
@@ -395,14 +397,12 @@
             }
         }
 
-        // Mettre à jour le prix du collatéral
         function updateCollateralPrice() {
             const collateralType = document.getElementById('collateral-type').value;
             const price = livePrices[collateralType];
             document.getElementById('collateral-price').textContent = `$${price.toLocaleString('fr-FR', { maximumFractionDigits: 2 })}`;
         }
 
-        // Calculer le prêt
         function calculateLoan() {
             const collateralType = document.getElementById('collateral-type').value;
             const collateralAmount = parseFloat(document.getElementById('collateral-amount').value) || 0;
@@ -432,34 +432,89 @@
             }
         }
 
-        // Intégration MetaMask
         async function connectMetaMask() {
-            if (typeof window.ethereum !== 'undefined') {
-                try {
-                    const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-                    const account = accounts[0];
-                    document.getElementById('wallet-address').classList.remove('hidden');
-                    document.getElementById('wallet-address').textContent = `Adresse connectée : ${account.slice(0, 6)}...${account.slice(-4)}`;
-                    document.getElementById('connect-metamask').textContent = 'MetaMask Connecté';
-                    document.getElementById('connect-metamask').disabled = true;
-                } catch (error) {
-                    console.error('Erreur lors de la connexion à MetaMask:', error);
-                    alert('Erreur lors de la connexion à MetaMask. Assurez-vous que l’extension est installée et activée.');
+            const connectButton = document.getElementById('connect-metamask');
+            const loadingSpinner = document.getElementById('loading-spinner');
+            const walletAddress = document.getElementById('wallet-address');
+            const networkStatus = document.getElementById('network-status');
+            const errorMessage = document.getElementById('error-message');
+
+            // Réinitialiser les messages
+            walletAddress.classList.add('hidden');
+            networkStatus.classList.add('hidden');
+            errorMessage.classList.add('hidden');
+
+            // Vérification approfondie de MetaMask
+            if (!window.ethereum) {
+                console.error("MetaMask non détecté : window.ethereum est undefined");
+                errorMessage.classList.remove('hidden');
+                errorMessage.textContent = "MetaMask n’est pas détecté. Veuillez vérifier que l’extension est installée et activée.";
+                return;
+            }
+
+            if (!window.ethereum.isMetaMask) {
+                console.error("L'objet window.ethereum n'est pas MetaMask");
+                errorMessage.classList.remove('hidden');
+                errorMessage.textContent = "L’extension détectée n’est pas MetaMask. Veuillez utiliser MetaMask.";
+                return;
+            }
+
+            try {
+                loadingSpinner.classList.remove('hidden');
+                connectButton.disabled = true;
+
+                // Vérifier si MetaMask est verrouillé
+                const accounts = await window.ethereum.request({ method: 'eth_accounts' });
+                if (accounts.length === 0) {
+                    console.log("MetaMask est verrouillé ou aucun compte n’est connecté");
+                    // Demander la connexion
+                    const newAccounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+                    if (newAccounts.length === 0) {
+                        throw new Error("Aucun compte n’a été autorisé.");
+                    }
+                    accounts.push(...newAccounts);
                 }
-            } else {
-                alert('MetaMask n’est pas installé. Veuillez installer l’extension pour continuer.');
+
+                const account = accounts[0];
+                walletAddress.classList.remove('hidden');
+                walletAddress.textContent = `Adresse connectée : ${account.slice(0, 6)}...${account.slice(-4)}`;
+
+                // Vérification du réseau (Arbitrum One : 0xa4b1)
+                const chainId = await window.ethereum.request({ method: 'eth_chainId' });
+                console.log("Chain ID détecté :", chainId);
+                if (chainId !== '0xa4b1') {
+                    networkStatus.classList.remove('hidden');
+                    networkStatus.textContent = 'Veuillez passer au réseau Arbitrum pour continuer.';
+                    walletAddress.classList.add('hidden');
+                } else {
+                    networkStatus.classList.add('hidden');
+                    connectButton.textContent = 'MetaMask Connecté';
+                }
+            } catch (error) {
+                console.error('Erreur détaillée lors de la connexion à MetaMask:', error);
+                errorMessage.classList.remove('hidden');
+                if (error.code === 4001) {
+                    errorMessage.textContent = 'Connexion refusée : Vous avez annulé la demande de connexion.';
+                } else if (error.code === -32002) {
+                    errorMessage.textContent = 'Une demande de connexion est déjà en cours. Vérifiez MetaMask.';
+                } else {
+                    errorMessage.textContent = `Erreur : ${error.message || 'Problème inconnu lors de la connexion à MetaMask.'}`;
+                }
+            } finally {
+                loadingSpinner.classList.add('hidden');
+                connectButton.disabled = false;
             }
         }
 
         function requestLoan() {
-            if (document.getElementById('connect-metamask').disabled) {
+            const connectButton = document.getElementById('connect-metamask');
+            if (connectButton.textContent === 'MetaMask Connecté') {
                 alert('Demande de prêt initiée ! Vérifiez votre portefeuille MetaMask pour confirmer la transaction.');
             } else {
                 alert('Veuillez connecter MetaMask avant de demander un prêt.');
             }
         }
 
-        // Gestion des événements
         document.addEventListener("DOMContentLoaded", () => {
             fetchLivePrices();
             setInterval(fetchLivePrices, 60000);
